--- a/codesquare/src/main/resources/templates/member/myPage/myReceivedMessageView.html
+++ b/codesquare/src/main/resources/templates/member/myPage/myReceivedMessageView.html
@@ -52,7 +52,7 @@
 				<div class="col-12 text-right">
 					<input class="mybtn mx-1" type="button" name="replyMessageBtn"
 						value="답장"> <input class="mybtn mx-1" type="button"
-						id="deleteMsg" value="삭제"> <input
+						id="deleteMsgMo" value="삭제"> <input
 						class="mybtn mx-1" type="button" name="toListMessageBtn"
 						value="목록으로">
 				</div>
