--- a/codesquare/src/main/resources/templates/member/myPage/mySendMessage.html
+++ b/codesquare/src/main/resources/templates/member/myPage/mySendMessage.html
@@ -39,7 +39,7 @@
 
 					<div class="col">
 						<textarea class="form-control" name="messageContent" cols="30"
-							rows="8"></textarea>
+							rows="8" maxlength="300"></textarea>
 					</div>
 				</div>
 				<div class="row py-2">
