--- a/codesquare/src/main/resources/templates/member/myPage/mySendNewMessage.html
+++ b/codesquare/src/main/resources/templates/member/myPage/mySendNewMessage.html
@@ -38,11 +38,11 @@
 					</div>
 				</div>
 
-				<div class="row py-2">
+				<div class="row py-2" id="messageContainer">
 
 					<div class="col-12">
-						<textarea class="form-control" name="messageContent" cols="30"
-							rows="7"></textarea>
+						<textarea class="form-control"  name="messageContent" cols="30"
+							rows="7" maxlength="300"></textarea>
 					</div>
 				</div>
 				<div class="row py-2">
